// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DrawEA draws_request_0 1`] = `
<canvas
  data-snapshot-image="9a275f427aeaa3473392f2ea7c1ce586c87d1810dea440387802ab455617952b4f962c44e58c8ce0cc1a0366d87dbb23c5188acc028f3c6e517c4652ad5cf531"
  height="500"
  width="800"
/>
`;

exports[`DrawEA draws_request_1 1`] = `
<canvas
  data-snapshot-image="0310fc77383ed56faa9883e3ca6ba47aef1ebf117f58e342312d2cbb152bdc492ba71b09b52509b63b11c51f393843694239ffb389a4ad4c7a4639ae8f6d3b0b"
  height="500"
  width="800"
/>
`;

exports[`DrawEA draws_request_2 1`] = `
<canvas
  data-snapshot-image="4e0a6cf9b4104522bbea2fa7e542b68c8ec76d3cea4592b02120b8822df375ef35adc8b9da5392189fa035f3a00411210a6e93f16b4284c3f5f01d58effb04a3"
  height="500"
  width="800"
/>
`;
